# RPIPico2-Exp

./: .gitmodules  README.md
examples/Blink/src/: main.c
examples/FPUPerf/: CMakeLists.txt
examples/FPUPerf/src/: CMakeLists.txt  Counter.h  main.cpp
examples/FPUPerf2040/: CMakeLists.txt
examples/FPUPerf2040/src/: CMakeLists.txt  Counter.cpp
examples/FreeRTOSBlink/: CMakeLists.txt
examples/FreeRTOSBlink/src/: CMakeLists.txt  main.cpp
examples/PI1Core/: CMakeLists.txt
examples/PI1Core/src/: CMakeLists.txt  main.cpp
examples/PI2Core/: CMakeLists.txt
examples/PI2Core/src/: CMakeLists.txt  main.cpp
openocd-hack/: batch.c
